--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <script src="{{ url_for('static', filename='js/hammer.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body class="{% block body_class %}light-mode{% endblock %}">
 <!-- Navigation Bar -->
@@ -52,6 +53,8 @@
         <div><button class="dark-mode-toggle" id="dark-mode-toggle" aria-label="Toggle Dark Mode" type="button">
             <span class="toggle"></span>
         </div>
+        <i style="font-size:24px; color: #ffffff; padding: 10px;" class="fab">&#xf375;</i>
+
     </footer>
 </body>
 </html>
