--- a/templates/base.html
+++ b/templates/base.html
@@ -48,15 +48,22 @@
     </div>
 
     <!-- Footer -->
-    <footer class="text-center py-4">
-        <p>&copy; 2024 Windhover. All Rights Reserved.</p>
-        <ul>
-			<li><span class="icon-amazon"></span></li>
-			<li><div><button class="dark-mode-toggle" id="dark-mode-toggle" aria-label="Toggle Dark Mode" type="button">
-                <span class="toggle"></span>
-            </div></li>
-            <li><span class="icon-github"></span></li>
-        </ul>
+    <footer class="container text-center">
+        <div class="row justify-content-center align-items-center">
+            <div>
+            <p>&copy; 2024 Windhover. All Rights Reserved.</p>
+            </div>
+            <div class="col-auto"><button class="dark-mode-toggle" id="dark-mode-toggle" aria-label="Toggle Dark Mode" type="button">
+            <span class="toggle"></span>
+            </div>
+            <div class="col-auto">
+            <span class="icon-amazon"></span>
+            </div>
+            <div class="col-auto">
+            <span class="icon-github"></span>
+            </div>
+        </div>
+        <br>
     </footer>
 </body>
 </html>
