--- a/templates/borrow.html
+++ b/templates/borrow.html
@@ -67,22 +67,27 @@
                 </div>
             </form>
         </div>
-        <br><br>
+        <br>
         <ul class="list-group">
             {% for record in borrowing_records %}
-            <li class="list-group-item {% if record.duedate < datetime.now().date() %} list-group-item-danger {% endif %}">
-                <strong>{{ record.book.title }}</strong> borrowed by {{ record.member.firstname }} {{ record.member.lastname }}<br>
-                Borrowed on: {{ record.borrowdate }} | Due on: {{ record.duedate }}
-                {% if record.returndate %}
-                    | Returned on: {{ record.returndate }}
-                {% else %}
-                    <form method="POST" action="/return_book/{{ record.borrowid }}" class="d-inline">
-                        <button type="submit" class="btn btn-sm btn-warning">Return Book</button>
-                    </form>
+            <li class="list-group-item d-flex justify-content-between align-items-center {% if record.duedate < datetime.now().date() %} list-group-item-danger {% endif %}">
+                <div>
+                    <strong>{{ record.book.title }}</strong> borrowed by {{ record.member.firstname }} {{ record.member.lastname }}<br>
+                    Borrowed on: {{ record.borrowdate }} | Due on: {{ record.duedate }}
+                    {% if record.returndate %}
+                        | Returned on: {{ record.returndate }}
+                    {% endif %}
+                </div>
+                
+                {% if not record.returndate %}
+                <form method="POST" action="/return_book/{{ record.borrowid }}" class="d-inline">
+                    <button type="submit" class="btn btn-sm btn-warning">Return Book</button>
+                </form>
                 {% endif %}
-            </li>            
+            </li>
             {% endfor %}
         </ul>
+        
         <!-- Pagination -->
         <nav aria-label="Page navigation" class="mt-3">
             <ul class="pagination">
