--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,6 +92,31 @@ header h1, header p {
     scroll-behavior: smooth;  /* Enable smooth scrolling */
 }
 
+.btn-circle {
+    width: 35px;
+    height: 35px;
+    padding: 5px 0;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.42857;
+}
+
+.flash-message-container {
+    width: 80%;
+    max-width: 600px;
+    opacity: 0.5;
+    z-index: 1050; /* Higher z-index to stay above other content */
+}
+
+.small-alert {
+    padding: 0.5rem 1rem; /* Smaller padding */
+    font-size: 0.875rem; /* Smaller font size */
+    background-color: rgba(0, 0, 0, 0.9); /* Semi-transparent background */
+    color: rgb(206, 207, 207);
+}
+
+
 /*Dark Mode settings/*
 
 
@@ -122,7 +147,15 @@ header h1, header p {
     transition: transform 0.3s;
 }
 
-body.dark-mode .dark-mode-toggle {
+body.dark-mode .modal-content,
+body.dark-mode .modal-header,
+body.dark-mode .modal-body,
+body.dark-mode .modal-footer {
+    background-color: var(--white) !important;
+    color: var(--grey) !important;
+}
+
+.dark-mode-toggle {
     background-color: #666;
 }
 
