--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,23 @@
     <script src="{{ url_for('static', filename='js/hammer.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/fonts.css') }}">
 </head>
 <body class="{% block body_class %}light-mode{% endblock %}">
+<!-- Flash Messages Section -->
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <div class="flash-message-container position-fixed top-0 start-50 translate-middle-x mt-2">
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show small-alert" role="alert">
+                    {{ message }}
+                    <button type="button" style="padding:12px" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endwith %}
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg">
     <div class="container">
