--- a/templates/borrow.html
+++ b/templates/borrow.html
@@ -63,7 +63,8 @@
             <div class="row mt-4">
                 <div class="col-12">
                     <h3>Trends</h3>
-                    <img id="borrowingPlot" src="{{ url_for('borrowing_plot') }}" alt="Borrowing Trends" class="img-fluid" style="cursor: pointer;">
+                    <img id="borrowingPlot" src="{{ url_for('borrowing_plot') }}" alt="Borrowing Trends" class="img-fluid border border-white rounded" 
+                    style="border-width: 5px; cursor: pointer;">
                 </div>
             </div>
             
