Updates on db and routes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,9 @@ body {
     color: var(--black);
 }
 
+.form-text {
+    color: rgb(207, 26, 26);
+}
 h1 {
     font-family: var(--paragraph-font-family);
     text-align: center;
