--- a/templates/members.html
+++ b/templates/members.html
@@ -6,29 +6,33 @@
 <div class="row">
     <!-- Add Member Form (left side) -->
     <div class="col-md-3">
-        <h2>Add Member</h2>
         <form method="POST" action="/members" class="add-form" enctype="multipart/form-data">
-            <div class="mb-3">
-                <label for="firstname" class="form-label">First Name:</label>
-                <input type="text" name="firstname" class="form-control" placeholder="First Name" required>
-            </div>
-
-            <div class="mb-3">
-                <label for="lastname" class="form-label">Last Name:</label>
-                <input type="text" name="lastname" class="form-control" placeholder="Last Name" required>
-            </div>
-
-            <div class="mb-3">
-                <label for="email" class="form-label">Email:</label>
-                <input type="email" name="email" class="form-control" placeholder="Email" required>
-            </div>
-
-            <div class="mb-3">
-                <label for="profilepicture" class="form-label">Profile Picture:</label>
-                <input type="file" name="profilepicture" class="form-control" accept="image/*">
-            </div>
-
-            <button type="submit" class="btn btn-primary">Add Member</button>
+            <fieldset>
+                <legend>Add a New Member</legend>
+                
+                <div class="mb-3">
+                    <label for="firstname" class="form-label">First Name:</label>
+                    <input type="text" name="firstname" class="form-control" placeholder="First Name" required>
+                </div>
+            
+                <div class="mb-3">
+                    <label for="lastname" class="form-label">Last Name:</label>
+                    <input type="text" name="lastname" class="form-control" placeholder="Last Name" required>
+                </div>
+            
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email:</label>
+                    <input type="email" name="email" class="form-control" placeholder="Email" required>
+                </div>
+            
+                <div class="mb-3">
+                    <label for="profilepicture" class="form-label">Profile Picture:</label>
+                    <input type="file" name="profilepicture" class="form-control" accept="image/*">
+                    <div id="picHelp" class="form-text">Close-up image, clearly showing face</div>
+                </div>
+            
+                <button type="submit" class="btn btn-primary">Add Member</button>
+            </fieldset>
         </form>
     </div>
 
@@ -86,7 +90,7 @@
                         onclick="openEditModal('{{ member.memberid }}', '{{ member.firstname }}', '{{ member.lastname }}', '{{ member.email }}', '{{ url_for('static', filename=member.profilepicture) }}')">
                     <div>
                         <strong>{{ member.firstname }} {{ member.lastname }}</strong><br>
-                        Joined: {{ member.joindate }}<br>
+                        Joined: {{ member.joindate | format_date }}<br>
                         Email: {{ member.email }}
                     </div>
                 </div>
