deleted:    routes.py

--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
                 <use xlink:href="#icon-bookmark"></use>
             </svg>
             <h2>{{ total_books }}</h2>
-            <p>Total Books</p>
+            <p>Registered Books</p>
         </div>   
 
         <!-- Total Members -->
@@ -53,7 +53,7 @@
                 <use xlink:href="#icon-user"></use>
             </svg>
             <h2>{{ total_members }}</h2>
-            <p>Registered Members</p>
+            <p>Total Members</p>
         </div>
 
         <!-- Total Books Borrowed -->
