--- a/templates/members.html
+++ b/templates/members.html
@@ -28,7 +28,7 @@
                 <div class="mb-3">
                     <label for="profilepicture" class="form-label">Profile Picture:</label>
                     <input type="file" name="profilepicture" class="form-control" accept="image/*">
-                    <div id="picHelp" class="form-text">Close-up image, clearly showing face</div>
+                    <div id="picHelp"><p><em>Close-up image, clearly showing face</em></p></div>
                 </div>
             
                 <button type="submit" class="btn btn-primary">Add Member</button>
