--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,9 +17,6 @@ body {
     color: var(--black);
 }
 
-.form-text {
-    color: rgb(207, 26, 26);
-}
 h1 {
     font-family: var(--paragraph-font-family);
     text-align: center;
@@ -55,6 +52,8 @@ nav {
 header h1, header p {
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 1), -1px -1px 2px rgba(255, 255, 255, 1);
 }
+
+
 .scroll-container {
     display: flex;
     gap: 20px;
@@ -104,6 +103,58 @@ header h1, header p {
     line-height: 1.42857;
 }
 
+/* Positioning for image and button container */
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+
+.button-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    gap: 10px; /* Space between buttons */
+    opacity: 0;
+    transition: opacity 0.3s ease; /* Smooth transition */
+}
+
+/* Show button container on hover */
+.image-container:hover .button-container {
+    opacity: 1;
+}
+
+/* Individual button styling */
+.edit-button, .delete-button {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    border: none;
+    padding: 8px 12px;
+    font-size: 14px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.edit-button:hover {
+    background-color: #007bff; /* Blue for edit on hover */
+}
+
+.delete-button:hover {
+    background-color: #dc3545; /* Red for delete on hover */
+}
+
+.form-control {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+@media (max-width: 576px) {
+    .form-control {
+        width: 100%;
+    }
+}
 .flash-message-container {
     width: 80%;
     max-width: 600px;
