--- a/templates/books.html
+++ b/templates/books.html
@@ -13,7 +13,7 @@
                 <div class="mb-3">
                     <label for="isbn" class="form-label">ISBN:</label>
                     <input type="text" id="isbn" name="isbn" class="form-control" required pattern="\d{10}|\d{13}" title="ISBN must be 10 or 13 digits" aria-describedby="isbnHelp">
-                    <div id="isbnHelp" class="form-text">ISBN should be 10 or 13 digits long.</div>
+                    <div id="isbnHelp"><p><em>ISBN should be 10 or 13 digits long.</em></p></div>
                 </div>
         
                 <div class="mb-3">
@@ -51,6 +51,7 @@
     </div>
     
     <div class="col-md-9">
+
         <!-- Row to contain the forms and filters -->
         <div class="row">
             <h2>Book List</h2>
@@ -82,19 +83,96 @@
                 </form>
             </div>
         </div>
-    
+
         <div class="scroll-container" id="scroll-container">
             <ul>
                 {% for book in books %}
                 <li>
-                    <img src="{{ url_for('static', filename=book.imagepath) }}" alt="Cover image of {{ book.title }}"><br>
-                    <strong>{{ book.title }}</strong><br>
+                    <div class="image-container">
+                        <img src="{{ url_for('static', filename=book.imagepath) }}" alt="Cover image of {{ book.title }}">
+                        
+                        <!-- Edit and Delete Buttons -->
+                        <div class="button-container">
+                            <button 
+                                class="edit-button" 
+                                data-bookid="{{ book.bookid }}" 
+                                data-title="{{ book.title | e }}" 
+                                data-author="{{ book.author | e }}" 
+                                data-publisher="{{ book.publisher | e }}" 
+                                data-publicationyear="{{ book.publicationyear }}" 
+                                data-bs-toggle="modal" 
+                                data-bs-target="#editBookModal"
+                                onclick="populateEditFormFromData(this)">
+                                Edit
+                            </button>
+                            <button class="delete-button" onclick="setDeleteFormAction({{ book.bookid }})" data-bs-toggle="modal" data-bs-target="#deleteBookModal">
+                                Delete
+                            </button>
+                        </div>
+                    </div>
+                    <br>
+                    <span class="title"><strong>{{ book.title }}</strong></span><br>
                     <span class="author">by {{ book.author }}</span><br>
-                    <span class="publisher">{{ book.publisher }}</span>, 
+                    <span class="publisher">{{ book.publisher }}</span>,
                     <span class="publication-year">{{ book.publicationyear }}</span>
                 </li>
                 {% endfor %}
             </ul>
+        </div>                
+    </div>
+</div>
+<!-- Edit Book Modal -->
+<div class="modal fade" id="editBookModal" tabindex="-1" aria-labelledby="editBookModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form id="editBookForm" method="POST">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editBookModalLabel">Edit Book</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="title" class="form-label">Title</label>
+                        <input type="text" class="form-control" id="editTitle" name="title" maxlength="105" required style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                    </div>
+                    <div class="mb-3">
+                        <label for="author" class="form-label">Author</label>
+                        <input type="text" class="form-control" id="editAuthor" name="author" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="publisher" class="form-label">Publisher</label>
+                        <input type="text" class="form-control" id="editPublisher" name="publisher" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="publicationyear" class="form-label">Publication Year</label>
+                        <input type="number" class="form-control" id="editPublicationYear" name="publicationyear" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<!-- Delete Confirmation Modal -->
+<div class="modal fade" id="deleteBookModal" tabindex="-1" aria-labelledby="deleteBookModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form id="deleteBookForm" method="POST">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteBookModalLabel">Confirm Deletion</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this book?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                    <button type="submit" class="btn btn-danger">Yes, delete</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
