--- a/templates/borrow.html
+++ b/templates/borrow.html
@@ -7,9 +7,6 @@
     <!-- Borrow Book Form (left side) -->
     <div class="col-md-3">
         <form method="POST" action="/borrowing" class="add-form">
-            <div id="loanHelp" class="form-text">
-                <p>IMPORTANT: <em>The standard loan period is one month, can only be renewed for seven days during the last week of borrowing.</em></p>
-            </div>
             <fieldset>
                 <legend>Record transaction</legend>
                 <!-- Member Dropdown with Search -->
@@ -69,6 +66,9 @@
                 <h3>Trends</h3>
                 <img id="borrowingPlot" src="{{ url_for('route.borrowing_plot') }}" style="padding:10px;background-color:#fff" alt="Borrowing Trends" class="img-fluid border border-white rounded" 
                 style="border-width: 5px; cursor: pointer;">
+            </div>
+            <div id="loanHelp">
+                <p>IMPORTANT: <em>The standard loan period is one month, can only be renewed for more seven days during the last week of borrowing.</em></p>
             </div>
         </div>
         
