Changes to be committed: 	new file:   Brands.json 	modified:   README.md 	modified:   app.py 	renamed:    planning.md -> bitacora.md 	modified:   blueprints/routes.py 	modified:   er_diagram.md 	new file:   icons.py 	modified:   run.py 	deleted:    static/css/fonts.css 	deleted:    static/css/fonts/icomoon.eot 	deleted:    static/css/fonts/icomoon.svg 	deleted:    static/css/fonts/icomoon.ttf 	deleted:    static/css/fonts/icomoon.woff 	modified:   static/css/style.css 	new file:   static/images/aws.svg 	new file:   static/images/openai.svg 	modified:   templates/base.html 	modified:   templates/borrow.html 	modified:   templates/home.html 	modified:   templates/members.html 	modified:   wsgi.py
 Changes not staged for commit:
	modified:   README.md
	modified:   blueprints/routes.py
	modified:   templates/base.html
	modified:   templates/home.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,13 +71,15 @@
                 <span class="toggle"></span>
             </div>
             <div class="col-auto">
-                <span class="icon-amazon"></span>
-            </div>
-            <div class="col-auto">
-                <span class="icon-github"></span>
-            </div>
-            <div class="col-auto">
-                <span class="icon-stackoverflow"></span>
+                <div class="icon-container">
+                    {% for icon in icons %}
+                        <div class="icon" title="{{ icon.name }}">
+                            <svg width="20" height="20" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" style="margin-bottom: 5px">
+                                <path d="{{ icon.path }}" fill="var(--icon-fill)">
+                            </svg>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </footer>
