--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,9 @@
     --black: #000000;
     --grey: #232325;
     --paragraph-font-family: 'CustomFont', sans-serif;
+    --icon-fill-light: #000000;
+    --icon-fill-dark: #ffffff;
+    --icon-fill: var(--icon-fill-light);
 }
 
 /* Default light mode */
@@ -27,6 +30,7 @@ h1 {
 body.dark-mode {
     background-color: var(--grey);
     color: var(--white);
+    --icon-fill: var(--icon-fill-dark);
 }
 
 nav {
@@ -148,6 +152,16 @@ header h1, header p {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.icon-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.icon {
+    padding: 10px;
 }
 
 @media (max-width: 576px) {
