--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
         </div>
         <div class="col-lg-4">
             <h2>Borrowing</h2>
-            <p>Note that renewal privileges are subject to change without notice.</p>
+            <p>Loans may be renewed for an additional seven days, but only during the final week of the borrowing period.</p>
             <a href="{{ url_for('route.manage_borrowing') }}" class="btn btn-primary">View Records</a>
         </div>
     </div>
