--- a/templates/books.html
+++ b/templates/books.html
@@ -71,7 +71,7 @@
                         <button class="btn btn-outline-secondary dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Publishers
                         </button>
-                        <ul class="dropdown-menu p-3" style="width:100px; max-height: 200px; overflow-y: auto;">
+                        <ul class="dropdown-menu p-3" style="width:300px; max-height: 400px; overflow-y: auto;">
                             {% for publisher in publishers %}
                             <li class="form-check">
                                 <input type="checkbox" class="form-check-input publisher-checkbox" name="publishers" value="{{ publisher }}" id="publisher_{{ publisher }}" {% if publisher in selected_publishers %}checked{% endif %}>
@@ -87,7 +87,7 @@
         <div class="scroll-container" id="scroll-container">
             <ul>
                 {% for book in books %}
-                <li>
+                <li class="me-3">
                     <div class="image-container">
                         <img src="{{ url_for('static', filename=book.imagepath) }}" alt="Cover image of {{ book.title }}">
                         
