--- a/templates/borrow.html
+++ b/templates/borrow.html
@@ -8,7 +8,7 @@
     <div class="col-md-3">
         <form method="POST" action="/borrowing" class="add-form">
             <fieldset>
-                <legend>Record transaction</legend>
+                <legend>Record Transaction</legend>
                 <!-- Member Dropdown with Search -->
                 <div class="mb-3">
                     <label for="member-search" class="form-label">Member:</label>
@@ -88,7 +88,7 @@
     
     <!-- Borrowing List (right side) -->
     <div class="col-md-9">
-        <h2>Borrowing History</h2>
+        <h2>History</h2>
         <div>
             <!-- Combined form with search, sort by, and order inputs in a single row -->
             <form method="GET" action="/borrowing" class="row g-3 align-items-end">
