--- a/templates/members.html
+++ b/templates/members.html
@@ -154,7 +154,7 @@
 <div class="modal fade" id="editMemberModal" tabindex="-1" aria-labelledby="editMemberModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form method="POST" action="{{ url_for('route.edit_member') }}" enctype="multipart/form-data">
+            <form method="POST" action="{{ url_for('members_bp.edit_member') }}" enctype="multipart/form-data">
                 <div class="modal-header">
                     <h5 class="modal-title" id="editMemberModalLabel">Edit Member Information</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
