change in icons

--- a/templates/home.html
+++ b/templates/home.html
@@ -105,15 +105,16 @@
 <div class="col-auto">
     <h2 class="text-center mb-4">Resources</h2>
     <div class="icon-container">
-        {% for icon in icons %}
-            <div class="icon" title="{{ icon.name }}">
-                <svg width="100" height="100" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
-                    <path d="{{ icon.path }}" fill="var(--icon-fill)">
-                </svg>
-            </div>
+        {% for name, icon in ico.items() %}
+        <div class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="{{ icon.viewBox }}" width="48" height="48">
+                <g fill="{{ icon.fill }}">
+                    <path d="{{ icon.path }}"></path>
+                </g>
+            </svg>
+        </div>
         {% endfor %}
     </div>
-</div>
 
 
 
